--- a/scores/src/mlb/score-card/score-card.component.scss
+++ b/scores/src/mlb/score-card/score-card.component.scss
@@ -1,11 +1,35 @@
-.score-card-container {
-  min-width: 300px;
+.card {
+  min-width: 325px;
 }
 
-.tag {
-  flex: 0;
+.card-content {
+  padding: .75em;
 }
 
-.score {
-  flex: 0;
+.card-wrapper {
+  grid-template-columns: auto 30px 65px;
+  display: grid;
+  grid-gap: 0.5em;
+  grid-template-areas: "team1 score1 status" "team2 score2 status";
+}
+
+.status {
+  grid-area: status;
+  align-self: center;
+}
+
+.team1 {
+  grid-area: team1;
+}
+
+.score1 {
+  grid-area: score1;
+}
+
+.team2 {
+  grid-area: team2;
+}
+
+.score2 {
+  grid-area: score2;
 }
