home and away backwards

--- a/scores/src/mlb/mlb-box-score/mlb-box-score.component.html
+++ b/scores/src/mlb/mlb-box-score/mlb-box-score.component.html
@@ -13,19 +13,19 @@
     <div class="columns is-vcentered is-centered">
       <div class="column has-text-centered is-3">
         <div class="score title">
-          {{ boxScore.score[0].score }}
+          {{ home.score }}
         </div>
         <div class="team">
-          {{ boxScore.score[0].team }}
+          {{ home.team }}
         </div>
       </div>
       <div class="column has-text-centered is-1">-</div>
       <div class="column has-text-centered is-3">
         <div class="score title">
-          {{ boxScore.score[1].score }}
+          {{ away.score }}
         </div>
         <div class="team">
-          {{ boxScore.score[1].team }}
+          {{ away.team }}
         </div>
       </div>
     </div>
@@ -47,22 +47,22 @@
             <th>E</th>
           </tr>
           <tr>
-            <td>{{ boxScore.score[0].team }}</td>
-            <td *ngFor="let line of homeLine">
-              {{ line }}
-            </td>
-            <td>{{ boxScore.score[0].score }}</td>
-            <td>{{ boxScore.score[0].hits }}</td>
-            <td>{{ boxScore.score[0].errors }}</td>
-          </tr>
-          <tr>
-            <td>{{ boxScore.score[1].team }}</td>
+            <td>{{ away.team }}</td>
             <td *ngFor="let line of awayLine">
               {{ line }}
             </td>
-            <td>{{ boxScore.score[1].score }}</td>
-            <td>{{ boxScore.score[1].hits }}</td>
-            <td>{{ boxScore.score[1].errors }}</td>
+            <td>{{ away.score }}</td>
+            <td>{{ away.hits }}</td>
+            <td>{{ away.errors }}</td>
+          </tr>
+          <tr>
+            <td>{{ home.team }}</td>
+            <td *ngFor="let line of homeLine">
+              {{ line }}
+            </td>
+            <td>{{ home.score }}</td>
+            <td>{{ home.hits }}</td>
+            <td>{{ home.errors }}</td>
           </tr>
         </thead>
       </table>
