minor fixes, abstracting card component

--- a/scores/src/mlb/mlb.component.html
+++ b/scores/src/mlb/mlb.component.html
@@ -3,7 +3,7 @@
 
   <div class="columns is-multiline">
     <div *ngFor="let scoreItem of scores" class="column">
-      <app-score-card [scoreItem]="scoreItem"></app-score-card>
+      <app-mlb-score-card [scoreItem]="scoreItem"></app-mlb-score-card>
     </div>
   </div>
 </div>
