--- a/scores/src/shared/score-card/score-card.component.html
+++ b/scores/src/shared/score-card/score-card.component.html
@@ -1,13 +1,36 @@
 <div class="card">
   <div class="card-content">
     <div class="card-wrapper">
-      <ng-content></ng-content>
+      <div class="team1">
+        {{ scoreItem.awayScore.team }}
+      </div>
+      <div class="score1" *ngIf="!isScheduled">
+        {{ scoreItem.awayScore.score }}
+      </div>
+      <div class="team2">
+        {{ scoreItem.homeScore.team }}
+      </div>
+      <div class="score2" *ngIf="!isScheduled">
+        {{ scoreItem.homeScore.score }}
+      </div>
+      <div class="status">
+        <span
+          class="tag is-pulled-right"
+          [class.is-info]="isInProgress"
+          [class.is-white]="isScheduled"
+          >{{ scoreItem.status }}</span
+        >
+      </div>
     </div>
   </div>
   <footer class="card-footer">
     <span class="card-footer-item column is-one-quarter">
-      <a *ngIf="showButton" (click)="buttonClicked.emit()" class="button is-success">
-        {{buttonText}}
+      <a
+        *ngIf="showButton"
+        (click)="buttonClicked.emit()"
+        class="button is-success"
+      >
+        {{ isScheduled ? 'Preview' : 'Box' }}
       </a>
     </span>
   </footer>
