--- a/scores/src/shared/score-card/score-card.component.scss
+++ b/scores/src/shared/score-card/score-card.component.scss
@@ -12,3 +12,24 @@
   grid-gap: 0.5em;
   grid-template-areas: "team1 score1 status" "team2 score2 status";
 }
+
+.status {
+  grid-area: status;
+  align-self: center;
+}
+
+.team1 {
+  grid-area: team1;
+}
+
+.score1 {
+  grid-area: score1;
+}
+
+.team2 {
+  grid-area: team2;
+}
+
+.score2 {
+  grid-area: score2;
+}
