finishing up wwc and better abstractions

--- a/scores/src/mlb/mlb-box-score/mlb-box-score.component.html
+++ b/scores/src/mlb/mlb-box-score/mlb-box-score.component.html
@@ -8,66 +8,36 @@
   </ul>
 </nav>
 
-<div class="card" *ngIf="boxScore">
-  <div class="card-content">
-    <div class="columns is-vcentered is-centered">
-      <img [src]="awayScore.logo" height="100" width="100"/>
-      <div class="column has-text-centered is-3">
-        <div class="score title">
-          {{ awayScore.score }}
-        </div>
-        <div class="team">
-          {{ awayScore.team }}
-        </div>
-      </div>
-      <div class="column has-text-centered is-1">-</div>
-      <div class="column has-text-centered is-3">
-        <div class="score title">
-          {{ homeScore.score }}
-        </div>
-        <div class="team">
-          {{ homeScore.team }}
-        </div>
-      </div>
-      <img [src]="homeScore.logo" height="100" width="100"/>
-    </div>
-
-    <div class="subtitle has-text-centered">
-      <span class="tag">{{ boxScore.status }}</span>
-    </div>
-
-    <div class="content">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Team</th>
-            <th *ngFor="let _ of homeLine; index as i">
-              {{ i + 1 }}
-            </th>
-            <th>R</th>
-            <th>H</th>
-            <th>E</th>
-          </tr>
-          <tr>
-            <td>{{ awayScore.team }}</td>
-            <td *ngFor="let line of awayLine">
-              {{ line }}
-            </td>
-            <td>{{ awayScore.score }}</td>
-            <td>{{ awayScore.hits }}</td>
-            <td>{{ awayScore.errors }}</td>
-          </tr>
-          <tr>
-            <td>{{ homeScore.team }}</td>
-            <td *ngFor="let line of homeLine">
-              {{ line }}
-            </td>
-            <td>{{ homeScore.score }}</td>
-            <td>{{ homeScore.hits }}</td>
-            <td>{{ homeScore.errors }}</td>
-          </tr>
-        </thead>
-      </table>
-    </div>
-  </div>
-</div>
+<app-box-score-page [boxScore]="boxScore" *ngIf="boxScore">
+  <table class="table">
+    <thead>
+    <tr>
+      <th>Team</th>
+      <th *ngFor="let _ of homeLine; index as i">
+        {{ i + 1 }}
+      </th>
+      <th>R</th>
+      <th>H</th>
+      <th>E</th>
+    </tr>
+    <tr>
+      <td>{{ awayScore.team }}</td>
+      <td *ngFor="let line of awayLine">
+        {{ line }}
+      </td>
+      <td>{{ awayScore.score }}</td>
+      <td>{{ awayScore.hits }}</td>
+      <td>{{ awayScore.errors }}</td>
+    </tr>
+    <tr>
+      <td>{{ homeScore.team }}</td>
+      <td *ngFor="let line of homeLine">
+        {{ line }}
+      </td>
+      <td>{{ homeScore.score }}</td>
+      <td>{{ homeScore.hits }}</td>
+      <td>{{ homeScore.errors }}</td>
+    </tr>
+    </thead>
+  </table>
+</app-box-score-page>
